docs: improve docss
