# internal/handler/user.go
@@ -8,6 +8,7 @@ import (
 	"github.com/labstack/echo/v4"
 	"github.com/muhrizqiardi/spendtracker/internal/database/model"
 	"github.com/muhrizqiardi/spendtracker/internal/dto"
+	"github.com/muhrizqiardi/spendtracker/internal/response"
 	"github.com/muhrizqiardi/spendtracker/internal/service"
 	"github.com/muhrizqiardi/spendtracker/internal/util"
 )
@@ -26,6 +27,11 @@ func NewUserHandler(us service.UserService) *userHandler {
 	return &userHandler{us}
 }
 
+// @Router		/users [post]
+// @Summary	Register user
+// @Tags		user
+// @Param		payload	body		dto.RegisterUserDTO	true	"Create user DTO"
+// @Success	201		{object}	util.BaseResponse[response.CommonUserResponse]
 func (uh *userHandler) Register(c echo.Context) error {
 	var payload dto.RegisterUserDTO
 	if err := c.Bind(&payload); err != nil {
@@ -47,7 +53,16 @@ func (uh *userHandler) Register(c echo.Context) error {
 
 	return c.JSON(
 		http.StatusCreated,
-		util.CreateBaseResponse[any](true, "User found", user),
+		util.CreateBaseResponse[response.CommonUserResponse](true, "User registered",
+			response.CommonUserResponse{
+				ID:        int(user.ID),
+				Email:     user.Email,
+				FullName:  user.FullName,
+				Password:  user.Password,
+				CreatedAt: user.CreatedAt,
+				UpdatedAt: user.UpdatedAt,
+			},
+		),
 	)
 }
 
@@ -76,6 +91,12 @@ func (uh *userHandler) GetOneByID(c echo.Context) error {
 	)
 }
 
+// @Router		/users/{userID} [put]
+// @Summary	Update user
+// @Tags		user
+// @Param		userID	path		string				true	"User ID"
+// @Param		payload	body		dto.UpdateUserDTO	true	"Update user DTO"
+// @Success	200		{object}	util.BaseResponse[response.CommonUserResponse]
 func (uh *userHandler) UpdateOneByID(c echo.Context) error {
 	userID, err := strconv.Atoi(c.Param("userID"))
 	if err != nil {
@@ -106,7 +127,16 @@ func (uh *userHandler) UpdateOneByID(c echo.Context) error {
 	}
 
 	return c.JSON(
-		http.StatusOK,
-		util.CreateBaseResponse[model.User](true, "User updated", user),
+		http.StatusCreated,
+		util.CreateBaseResponse[response.CommonUserResponse](true, "User updated",
+			response.CommonUserResponse{
+				ID:        int(user.ID),
+				Email:     user.Email,
+				FullName:  user.FullName,
+				Password:  user.Password,
+				CreatedAt: user.CreatedAt,
+				UpdatedAt: user.UpdatedAt,
+			},
+		),
 	)
 }
