# internal/response/user.go
@@ -1,0 +1,12 @@
+package response
+
+import "time"
+
+type CommonUserResponse struct {
+	ID        int       `json:"id"`
+	Email     string    `json:"email"`
+	FullName  string    `json:"fullName"`
+	Password  string    `json:"password"`
+	CreatedAt time.Time `json:"createdAt"`
+	UpdatedAt time.Time `json:"updatedAt"`
+}
